[gd_scene load_steps=41 format=3 uid="uid://gihsgis24u0u"]

[ext_resource type="Script" path="res://main_game.gd" id="1_13ll7"]
[ext_resource type="Shader" path="res://shaders/spacefield.gdshader" id="2_ad13f"]
[ext_resource type="Script" path="res://WallTop.gd" id="2_lrrp4"]
[ext_resource type="Script" path="res://WallRight.gd" id="4_pxe1g"]
[ext_resource type="Texture2D" uid="uid://cfpdwyd0ntd0y" path="res://simple-wall.png" id="5_hrmhu"]
[ext_resource type="Script" path="res://WallLeft.gd" id="5_yuo4e"]
[ext_resource type="Script" path="res://WallBottom.gd" id="6_1boe8"]
[ext_resource type="FontFile" uid="uid://dl6bhefdp4ioj" path="res://Sinclair ZX Spectrum ES Regular.ttf" id="7_owebi"]
[ext_resource type="Texture2D" uid="uid://bcf2objv7qho3" path="res://life-icon.png" id="8_cbyow"]
[ext_resource type="Texture2D" uid="uid://cjj4dq25koi4c" path="res://UI/on-screen-left.png" id="11_s25e8"]
[ext_resource type="Texture2D" uid="uid://c4cdt4lgjym5b" path="res://backgrounds/starfield1.png" id="11_swsf0"]
[ext_resource type="Texture2D" uid="uid://cuejnpyp8gnhw" path="res://backgrounds/starfield2.png" id="12_knq2m"]
[ext_resource type="Texture2D" uid="uid://4sj3w1ing7fa" path="res://UI/on-screen-left-pressed.png" id="12_n4qtm"]
[ext_resource type="Texture2D" uid="uid://24p3y0xqrv5d" path="res://UI/on-screen-right.png" id="13_eqku5"]
[ext_resource type="Texture2D" uid="uid://bq7lkvmua8q0q" path="res://UI/on-screen-right-pressed.png" id="14_oa4d7"]
[ext_resource type="Shader" path="res://scrolling.gdshader" id="14_tnqea"]
[ext_resource type="Texture2D" uid="uid://gq8pwttrkltk" path="res://UI/on-screen-thrust.png" id="15_7f84b"]
[ext_resource type="Texture2D" uid="uid://boh8bt1uskwxe" path="res://UI/on-screen-thrust-pressed.png" id="16_wpeq6"]
[ext_resource type="Theme" uid="uid://dva1lk32kcccy" path="res://UI/jurl-theme.tres" id="20_av2u8"]
[ext_resource type="Texture2D" uid="uid://bnym3t3y1kuv2" path="res://UI/menu.png" id="21_gkql7"]
[ext_resource type="Texture2D" uid="uid://bo031quv8g1pb" path="res://UI/menu-pressed.png" id="22_gv2px"]
[ext_resource type="Texture2D" uid="uid://nvcv8tnf7dyk" path="res://Graphics/jurl-succeeded.png" id="22_txjhf"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_pma2d"]
shader = ExtResource("2_ad13f")
shader_parameter/iterations = 20
shader_parameter/formuparam = 1.0
shader_parameter/volsteps = 20
shader_parameter/stepsize = 0.1
shader_parameter/zoom = 0.5
shader_parameter/tile = 0.5
shader_parameter/speed = 0.001
shader_parameter/brightness = 0.001
shader_parameter/darkmatter = 0.1
shader_parameter/distfading = 0.65
shader_parameter/saturation = 0.75

[sub_resource type="NoiseTexture2D" id="NoiseTexture2D_cx6ed"]

[sub_resource type="PhysicsMaterial" id="PhysicsMaterial_7e4vv"]
friction = 0.0
bounce = 0.5

[sub_resource type="RectangleShape2D" id="RectangleShape2D_gnlrv"]
size = Vector2(1917, 34)

[sub_resource type="PhysicsMaterial" id="PhysicsMaterial_exe7l"]
friction = 0.0
bounce = 0.5

[sub_resource type="RectangleShape2D" id="RectangleShape2D_judbq"]
size = Vector2(34, 1018)

[sub_resource type="PhysicsMaterial" id="PhysicsMaterial_lwnvf"]
friction = 0.0
bounce = 0.5

[sub_resource type="RectangleShape2D" id="RectangleShape2D_xnpt0"]
size = Vector2(34, 1066)

[sub_resource type="PhysicsMaterial" id="PhysicsMaterial_y8cqu"]
friction = 0.0
bounce = 0.5

[sub_resource type="RectangleShape2D" id="RectangleShape2D_x0lg3"]
size = Vector2(1906, 34)

[sub_resource type="LabelSettings" id="LabelSettings_njgwo"]
font = ExtResource("7_owebi")
font_size = 56
font_color = Color(0, 0.682353, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_p74pc"]
font = ExtResource("7_owebi")
font_size = 56

[sub_resource type="LabelSettings" id="LabelSettings_u1m57"]
font = ExtResource("7_owebi")
font_size = 139
font_color = Color(0.721569, 0, 0, 1)
outline_size = 1
shadow_size = 23
shadow_color = Color(0.247059, 0.243137, 0.231373, 0.768627)
shadow_offset = Vector2(2, 2)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_d5qmw"]
shader = ExtResource("14_tnqea")
shader_parameter/scroll = Vector2(0.1, 2.08165e-12)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_vshex"]
shader = ExtResource("14_tnqea")
shader_parameter/scroll = Vector2(0.2, 2.08165e-12)

[sub_resource type="CircleShape2D" id="CircleShape2D_4gygq"]
radius = 20.0

[sub_resource type="CircleShape2D" id="CircleShape2D_c78ve"]
radius = 20.0

[sub_resource type="CircleShape2D" id="CircleShape2D_clueq"]
radius = 30.0

[node name="MainGame" type="Node2D"]
script = ExtResource("1_13ll7")

[node name="StaticSpaceBackground" type="Sprite2D" parent="."]
material = SubResource("ShaderMaterial_pma2d")
position = Vector2(962, 594)
scale = Vector2(3.63281, 1.83203)
texture = SubResource("NoiseTexture2D_cx6ed")

[node name="WallTop" type="StaticBody2D" parent="."]
z_index = 1
position = Vector2(0, 98)
physics_material_override = SubResource("PhysicsMaterial_7e4vv")
script = ExtResource("2_lrrp4")

[node name="CollisionShape2D" type="CollisionShape2D" parent="WallTop"]
position = Vector2(961.5, 17)
shape = SubResource("RectangleShape2D_gnlrv")

[node name="Simple-wall" type="Sprite2D" parent="WallTop"]
visibility_layer = 2
position = Vector2(960, 16)
scale = Vector2(60, 1)
texture = ExtResource("5_hrmhu")

[node name="WallRight" type="StaticBody2D" parent="."]
z_index = 1
physics_material_override = SubResource("PhysicsMaterial_exe7l")
script = ExtResource("4_pxe1g")

[node name="CollisionShape2D" type="CollisionShape2D" parent="WallRight"]
position = Vector2(1905, 539)
rotation = 3.14159
shape = SubResource("RectangleShape2D_judbq")

[node name="Simple-wall4" type="Sprite2D" parent="WallRight"]
position = Vector2(1904, 523.912)
rotation = 1.5708
scale = Vector2(32.7476, 1)
skew = -0.000317216
texture = ExtResource("5_hrmhu")

[node name="WallLeft" type="StaticBody2D" parent="."]
z_index = 1
physics_material_override = SubResource("PhysicsMaterial_lwnvf")
script = ExtResource("5_yuo4e")

[node name="CollisionShape2D" type="CollisionShape2D" parent="WallLeft"]
position = Vector2(17, 547)
shape = SubResource("RectangleShape2D_xnpt0")

[node name="Simple-wall3" type="Sprite2D" parent="WallLeft"]
position = Vector2(16, 523.784)
rotation = -1.5708
scale = Vector2(32.7682, 1)
skew = 0.000328898
texture = ExtResource("5_hrmhu")

[node name="WallBottom" type="StaticBody2D" parent="."]
z_index = 1
physics_material_override = SubResource("PhysicsMaterial_y8cqu")
script = ExtResource("6_1boe8")

[node name="CollisionShape2D" type="CollisionShape2D" parent="WallBottom"]
position = Vector2(967, 1063)
shape = SubResource("RectangleShape2D_x0lg3")

[node name="Simple-wall2" type="Sprite2D" parent="WallBottom"]
position = Vector2(960, 1064)
rotation = -3.14159
scale = Vector2(59.9858, 1)
texture = ExtResource("5_hrmhu")

[node name="ScoreLabel" type="Label" parent="."]
offset_left = 48.0
offset_top = 26.0
offset_right = 320.0
offset_bottom = 90.0
text = "SCORE"
label_settings = SubResource("LabelSettings_njgwo")
vertical_alignment = 1

[node name="Score" type="Label" parent="."]
offset_left = 332.0
offset_top = 31.0
offset_right = 626.0
offset_bottom = 90.0
text = "000000"
label_settings = SubResource("LabelSettings_p74pc")

[node name="Life1" type="Sprite2D" parent="."]
position = Vector2(1831, 58)
scale = Vector2(1.5, 1.5)
texture = ExtResource("8_cbyow")

[node name="Life2" type="Sprite2D" parent="."]
position = Vector2(1776, 58)
scale = Vector2(1.5, 1.5)
texture = ExtResource("8_cbyow")

[node name="Life3" type="Sprite2D" parent="."]
position = Vector2(1720, 58)
scale = Vector2(1.5, 1.5)
texture = ExtResource("8_cbyow")

[node name="Simple-wall" type="Sprite2D" parent="."]
visibility_layer = 2
position = Vector2(964, 7.502)
scale = Vector2(58.25, 0.531125)
texture = ExtResource("5_hrmhu")

[node name="LevelText" type="Label" parent="."]
z_index = 3
anchors_preset = -1
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 520.0
offset_top = 368.0
offset_right = 1430.0
offset_bottom = 794.0
grow_horizontal = 2
grow_vertical = 2
text = "COLLECT
AND
AVOID"
label_settings = SubResource("LabelSettings_u1m57")
horizontal_alignment = 1
vertical_alignment = 1

[node name="StartLevelTimer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[node name="HiScoreLabel" type="Label" parent="."]
offset_left = 791.0
offset_top = 26.0
offset_right = 1162.0
offset_bottom = 90.0
text = "HISCORE
"
label_settings = SubResource("LabelSettings_njgwo")
vertical_alignment = 1

[node name="HiScore" type="Label" parent="."]
offset_left = 1185.0
offset_top = 31.0
offset_right = 1479.0
offset_bottom = 90.0
text = "000000"
label_settings = SubResource("LabelSettings_p74pc")

[node name="Starfield1" type="Sprite2D" parent="."]
texture_repeat = 2
material = SubResource("ShaderMaterial_d5qmw")
position = Vector2(960.5, 592)
scale = Vector2(7.52209, 7.23438)
texture = ExtResource("11_swsf0")

[node name="Starfield2" type="Sprite2D" parent="."]
texture_repeat = 2
material = SubResource("ShaderMaterial_vshex")
position = Vector2(960, 589.5)
scale = Vector2(7.84937, 8.38739)
texture = ExtResource("12_knq2m")

[node name="BackgroundMusicPlayer" type="AudioStreamPlayer" parent="."]
autoplay = true
bus = &"background"

[node name="EffectsPlayer" type="AudioStreamPlayer" parent="."]
bus = &"effects"

[node name="HBoxContainer" type="HBoxContainer" parent="."]
offset_left = 44.0
offset_top = 798.0
offset_right = 1874.0
offset_bottom = 1048.0

[node name="InstructionsLabel" type="Label" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource("20_av2u8")
theme_type_variation = &"HeaderLarge"
theme_override_colors/font_color = Color(0.705882, 0, 0, 1)
text = "A simple one, just collect the star diamonds and get
used to the controls.

Left and Right to rotate, up to applY thrust"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2
uppercase = true

[node name="TouchScreenLeft" type="TouchScreenButton" parent="."]
modulate = Color(1, 1, 1, 0.337255)
position = Vector2(37, 786)
scale = Vector2(4, 4)
texture_normal = ExtResource("11_s25e8")
texture_pressed = ExtResource("12_n4qtm")
shape = SubResource("CircleShape2D_4gygq")
action = "left"
visibility_mode = 1

[node name="TouchScreenRight" type="TouchScreenButton" parent="."]
modulate = Color(1, 1, 1, 0.337255)
position = Vector2(297, 786)
scale = Vector2(4, 4)
texture_normal = ExtResource("13_eqku5")
texture_pressed = ExtResource("14_oa4d7")
shape = SubResource("CircleShape2D_c78ve")
action = "right"
visibility_mode = 1

[node name="TouchScreenThrust" type="TouchScreenButton" parent="."]
modulate = Color(1, 1, 1, 0.337255)
position = Vector2(1613, 776)
scale = Vector2(4, 4)
texture_normal = ExtResource("15_7f84b")
texture_pressed = ExtResource("16_wpeq6")
shape = SubResource("CircleShape2D_clueq")
action = "thrust"
visibility_mode = 1

[node name="TouchScreenMenu" type="TouchScreenButton" parent="."]
position = Vector2(57, 152)
scale = Vector2(2, 2)
texture_normal = ExtResource("21_gkql7")
texture_pressed = ExtResource("22_gv2px")
action = "escape"
visibility_mode = 1

[node name="timeLabel" type="Label" parent="."]
offset_left = 835.0
offset_top = 155.0
offset_right = 1091.0
offset_bottom = 198.0
theme = ExtResource("20_av2u8")
theme_override_font_sizes/font_size = 40
text = "00:00:00"

[node name="bestTimeLabel" type="Label" parent="."]
offset_left = 1361.0
offset_top = 155.0
offset_right = 1708.0
offset_bottom = 198.0
theme = ExtResource("20_av2u8")
theme_override_colors/font_color = Color(0, 0.596078, 0, 1)
theme_override_font_sizes/font_size = 40
text = "[ 00:00:00 ]"

[node name="PlayerStartPosition" type="Node2D" parent="."]
position = Vector2(1782, 536)

[node name="EnemySpawn1" type="Node2D" parent="."]
position = Vector2(111, 289)

[node name="EnemySpawn2" type="Node2D" parent="."]
position = Vector2(111, 403)

[node name="EnemySpawn3" type="Node2D" parent="."]
position = Vector2(111, 529)

[node name="EnemySpawn4" type="Node2D" parent="."]
position = Vector2(111, 640)

[node name="EnemySpawn5" type="Node2D" parent="."]
position = Vector2(111, 753)

[node name="EnemySpawn6" type="Node2D" parent="."]
position = Vector2(111, 864)

[node name="EnemySpawn7" type="Node2D" parent="."]
position = Vector2(245, 232)

[node name="EnemySpawn8" type="Node2D" parent="."]
position = Vector2(245, 346)

[node name="EnemySpawn9" type="Node2D" parent="."]
position = Vector2(245, 472)

[node name="EnemySpawn10" type="Node2D" parent="."]
position = Vector2(245, 583)

[node name="EnemySpawn11" type="Node2D" parent="."]
position = Vector2(245, 696)

[node name="EnemySpawn12" type="Node2D" parent="."]
position = Vector2(245, 807)

[node name="JurlResult" type="Sprite2D" parent="."]
visible = false
z_index = 40
position = Vector2(971, 827)
texture = ExtResource("22_txjhf")
